Commit mudanças na gravação dos arquivos bem como alteração de nomes, mudança no arquivo de edição, etc...

--- a/application/views/scripts/index/add.phtml
+++ b/application/views/scripts/index/add.phtml
@@ -2,5 +2,33 @@
 $this->title = "Add new album";
 
 $this->headTitle($this->title);
-echo $this->form ;
+
 ?>
+
+<form enctype="multipart/form-data" method="post" action>
+    <table>
+        <tr>
+            <td>Artista:</td>
+            <td><?php echo $this->form->artist; ?></td>
+        </tr>
+        <tr>
+            <td>Título:</td>
+            <td><?php echo $this->form->title; ?></td>
+        </tr>
+        <tr>
+            <td>Imagem:</td>
+            <td><?php echo $this->form->imagem; ?></td>
+        </tr>
+        <tr>
+            <td>Arquivo Txt:</td>
+            <td><?php echo $this->form->arq_texto; ?></td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td><?php echo $this->form->submit; ?></td>
+        </tr>
+    </table>
+</form>
+
+
+
