--- a/application/views/scripts/acesso/logout.phtml
+++ b/application/views/scripts/acesso/logout.phtml
@@ -1,5 +1,8 @@
 <?php
 
-    $VarSessao = new Zend_Session_Namespace('NovaSessao');
+/* 
+ * To change this license header, choose License Headers in Project Properties.
+ * To change this template file, choose Tools | Templates
+ * and open the template in the editor.
+ */
 
-    echo $VarSessao->user;
